src/test/fun-test/semantic/IncorrectReturn.java.err
Semantic error: missing return statement, line 2, pos 16
