src/test/fun-test/semantic/IncorrectReturn.java
class Main {
    int foo() {}
    void main() {}
}